# agentic-system

./: .cursorignore  .dockerignore  .env.example  .gitignore  .markdownlint.json  ARCHITECTURE_EVOLUTION_PLAN.md  Dockerfile  MIGRATION_GUIDE.md  README.md  README_OLD.md  SCRIPTS_MIGRATION.md  activate_venv.sh  demo.py  interactive_cli.py  pyproject.toml  quick_demo.py  requirements.txt  test_financial_fix.py  test_time.py  test_time_fix.py  web_cli.py
data/: README.md
data/database/: README.md
data/database/schema/: 00_drop_tables.sql  01_schema.sql  03_redaptive_energy_schema.sql  03_redaptive_energy_schema_enhanced.sql
data/database/seed/: 02_seed_data.sql  04_redaptive_sample_data.sql  04_redaptive_sample_data_enhanced.sql  05_redaptive_sample_data_part2.sql
docs/: DOCUMENTATION_INDEX.md  MIGRATION_GUIDE.md  README.md
docs/agents/: DATABASE_ORCHESTRATION.md  PDF_ORCHESTRATION.md
docs/agents/energy/: README.md
docs/api/: README.md
docs/architecture/: ARCHITECTURE_EVOLUTION_PLAN.md
docs/business/: README.md  platform-features.md
docs/deployment/: README.md
docs/development/: MCP_LEARNING_GUIDE.md  domain specific genAI.md  domain_specific_genai_summary.md
docs/orchestration/: README.md
docs/streaming/: README.md
examples/: README.md
examples/database/: README.md  database_orchestration_example.py
examples/energy/: README.md  energy_orchestration_example.py  portfolio_analysis_example.py  utility_bill_processing_example.py
examples/pdf/: README.md  pdf_orchestration_example.py
examples/streaming/: energy_streaming_example.py
infrastructure/: README.md  docker-compose.dev.yml  setup-dev.sh
scripts/: README.md  check_credentials.py  terminal_cli.py  web_interface.py
scripts/database/: README.md  setup_energy_db.sh  test_energy_db.sh
scripts/dev/: migrate_to_new_structure.py
scripts/examples/: orchestration_demo.py
scripts/ide/: generate_cursor_mcp.py
scripts/tools/: db_admin_tool.py  mcp_client.py
src/redaptive/: __init__.py  __main__.py
src/redaptive/agents/: __init__.py  system_agent.py
src/redaptive/config/: __init__.py  database.py  planner_config.py  (+1 more)
tests/: ADAPTIVE_PLANNING_SUMMARY.md  DYNAMIC_PLANNER_IMPROVEMENTS.md  MATCHER_PLANNER_INTEGRATION_SUMMARY.md  REORGANIZATION_SUMMARY.md  TESTING.md  UI_WALMART_QUERY_FINAL_FIX.md  UI_WALMART_QUERY_FIX_SUMMARY.md  WALMART_PORTFOLIO_TEST_RESULTS.md  conftest.py  debug_llm.py  demo_learning_planning.py  requirements-test.txt  run_tests.py  run_tests_new.py  summary_learning_planning.py  test_adaptive_planning.py  test_hybrid_planner.py  test_learning_based_planning.py  test_llm_planner.py  test_matcher_planner_integration.py  test_planning_method.py  test_walmart_portfolio_comprehensive.py
tests/demos/: adaptive_planning_demo.py  llm_client_demo.py  planning_comparison_demo.py
tests/integration/: test_agents.py  test_orchestrator.py  test_pdf_summary.py  test_platform.py
tests/setup/: test_mcp_setup.py
tests/unit/: quick_test.py  test_agents.py  test_config.py  test_intelligent_orchestrator.py  test_orchestration.py  test_planning.py  test_streaming.py  test_tools.py
tools/: README.md  demo.py
tools/debug/: debug_time.py
tools/tests/: test_api_logging.py  test_cli_energy_date.py  test_cli_options.py  test_database_energy_date.py  test_energy_date_query.py  test_scope.py
(+30 files in other folders)
