[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redaptive-agentic-platform"
version = "0.3.0"
description = "Multi-agent AI system for Energy-as-a-Service (EaaS) portfolio management and optimization"
authors = [
    {name = "Redaptive AI Team", email = "ai@redaptive.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["ai", "agents", "energy", "iot", "mcp", "redaptive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "psycopg2-binary>=2.9.0",
    "asyncio>=3.4.3",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
redis = [
    "redis>=4.5.0",
    "redis-py-cluster>=2.1.0",
]
kafka = [
    "aiokafka>=0.8.0",
]
streaming = [
    "redis>=4.5.0",
    "aiokafka>=0.8.0",
]
monitoring = [
    "prometheus-client>=0.16.0",
    "opentelemetry-api>=1.15.0",
    "opentelemetry-sdk>=1.15.0",
]

[project.urls]
Homepage = "https://github.com/redaptive/agentic-platform"
Documentation = "https://docs.redaptive.com/agentic-platform"
Repository = "https://github.com/redaptive/agentic-platform.git"
Issues = "https://github.com/redaptive/agentic-platform/issues"

[project.scripts]
redaptive = "redaptive.__main__:main"
redaptive-agent = "redaptive.agents.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["redaptive*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["redaptive"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "psycopg2.*",
    "redis.*",
    "kafka.*",
]
ignore_missing_imports = true